# discord-tracker

./: .biomeignore  .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  biome.json  build.sh  discord-tracker-linux-x64  package.json  tsconfig.json
.github/workflows/: auto-release.yml  build-binary.yml  build.yml  ci.yml  docker-publish.yml  download-binary.yml  example.yml  integration_tests.yml  release.yml  test.yml  version-manager.yml
.kiro/specs/discord-embed-update-fix/: design.md  requirements.md  tasks.md
scripts/: dev-setup.sh  gh-release.sh  quick-test.sh  release.sh  test-docker.sh
src/: discordApi.ts  discord_api.rs  error.rs  error.ts  index.ts  lib.rs  main.rs  main.ts  messageBuilder.ts  message_builder.rs  models.rs  models.ts  pipelineTracker.ts  pipeline_tracker.rs  pipeline_tracker.ts  storage.rs  storage.ts  validation.rs  validation.ts
src/tests/: dateSerialization.test.ts  discordApi.test.ts  discordApiRetry.test.ts  discord_api_tests.rs  errorHandling.test.ts  fixesValidation.test.ts  integration_tests.rs  messageBuilder.test.ts  message_builder_tests.rs  mod.rs  pipelineEndToEndIntegration.test.ts  pipelineIntegration.test.ts  pipelineTracker.test.ts  pipeline_tracker_tests.rs  statePersistenceOrder.test.ts  stateValidation.test.ts  stateValidationAndBackup.test.ts  storage.test.ts  validation.test.ts  validation_tests.rs
