[package]
name = "discord-tracker-action"
version = "1.0.6"
edition = "2021"
authors = ["FluentAI Team"]
description = "GitHub Action for tracking CI/CD pipeline progress in Discord"
license = "MIT"
repository = "https://github.com/flazouh/discord-tracker-action"
keywords = ["discord", "github-action", "ci", "cd", "pipeline", "tracker"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "discord-tracker-action"
path = "src/main.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system operations
tokio-fs = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Build optimizations for faster compilation
[profile.dev]
opt-level = 0
debug = true

# Faster builds in CI/Docker
[profile.release.build-override]
opt-level = 0
debug = false 